--- a/mybugtrackproject/bugtracker/static/css/stylesheet.css
+++ b/mybugtrackproject/bugtracker/static/css/stylesheet.css
@@ -72,11 +72,7 @@ input[type="submit"]:hover, .btn-custom:hover {
 	}
 }
 
-/* Fixed top margin for body */
-body {
-	min-height: 75rem;
-	padding-top: 4.5rem;
-} 
+ 
 
 /* Form container styling */
 .form-container {
@@ -108,4 +104,10 @@ body {
   padding: 8px;
   border: 1px solid #ccc;
   border-radius: 4px;
+}
+
+/* Fixed top margin for body */
+body {
+	min-height: 75rem;
+	padding-top: 56px;
 }
