--- a/mybugtrackproject/bugtracker/templates/bug_confirm_delete.html
+++ b/mybugtrackproject/bugtracker/templates/bug_confirm_delete.html
@@ -6,5 +6,5 @@
         {% csrf_token %}
         <button type="submit">Yes, delete it</button>
     </form>
-    <a href="{% url 'bug-detail' object.id %}">Cancel</a>
+    <a href="{% url 'bug_detail' object.id %}">Cancel</a>
 {% endblock %}
