--- a/mybugtrackproject/bugtracker/templates/nav.html
+++ b/mybugtrackproject/bugtracker/templates/nav.html
@@ -1,11 +1,11 @@
 {% load static %}
-<nav class="navbar navbar-expand-md" style="background-color: #5ca4a9;">
+<nav class="navbar navbar-expand-md navbar-light fixed-top" style="background-color: #5ca4a9;">
   <a class="navbar-brand" href="{% url 'home' %}" style="color: #f6f6f6;">Bug Tracker</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarCollapse">
-    <ul class="navbar-nav mr-auto">
+    <ul class="navbar-nav ml-auto">
       <li class="nav-item active">
         <a class="nav-link" href="{% url 'home' %}" style="color: #f6f6f6;">Home <span class="sr-only">(current)</span></a>
       </li>
@@ -15,9 +15,7 @@
       <li class="nav-item">
         <a class="nav-link" href="{% url 'add_bug' %}" style="color: #f6f6f6;">Report Bug</a>
       </li>
-      <!-- Add other navigation items here -->
-    </ul>
-    <ul class="navbar-nav ml-auto">
+      <!-- Authentication Links -->
       {% if user.is_authenticated %}
         <li class="nav-item">
           <a class="nav-link" href="{% url 'logout' %}" style="color: #ffdf5e;">Logout ({{ user.username }})</a>
